--- a/src/styles/_select.scss
+++ b/src/styles/_select.scss
@@ -80,6 +80,7 @@ box-shadow: none;
 .select2-dropdown {
     border: 1px solid $charcoal!important;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+    top: -3rem;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow  {
